retrieveUnpackaged/objects/Stages__c.object
<CustomObject>
    <fields>
        <fullName>Consensus_Approach__c</fullName>
        <label>Consensus Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Consensus Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consensus Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the review of the particular stage</description>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enter_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enter Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions_to_Reviewers__c</fullName>
        <description>Instructions are given to the reviewers</description>
        <label>Instructions to Reviewers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <label>NOFA Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of that particular stage</description>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Stage_Title__c</fullName>
        <label>Review Stage Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Describe the roles of the particular stage.</description>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Reviewers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Section_1_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 1 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_1__c</fullName>
        <description>Name of the section1 of that stage</description>
        <label>Section 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_2_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 2 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_2__c</fullName>
        <description>Name of the section2 of that stage</description>
        <label>Section 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_3_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 3 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_3__c</fullName>
        <description>Name of the section3 of that stage</description>
        <label>Section 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Sequence Number of that particular stage</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <label>Stage Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Question1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Question</label>
        <referenceTo>Stage_Question__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the review of particular stage</description>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the status of that particular stage</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Clarification_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Clarification Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describes the type of that particular stage</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stages</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Stage-{0000}</displayFormat>
        <label>Stages ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>